--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,13 @@
+* {
+    font-family: 'Indie Flower', cursive;
+}
+.btnInput:active {
+    outline: none !important;
+    border-bottom: none;
+}
+.btnInput:focus {
+    outline: none !important;
+    border-bottom: none;
 
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+}
